--- a/index/index.html
+++ b/index/index.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Butcherman&family=Martel+Sans:wght@600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <title>Spotify - Web Player: Music for everyone</title>
+    <title>SpotBeats - Web Player: Music for everyone</title>
 </head>
 
 <body>
